# azure-llm-example

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb  test.py  utils.py
agents/: knowledge.py  reception.py
prompts/german/system/: empfang.md  frage_antwort.md  frage_antwort_validierung.md  rezeptionist.md
prompts/german/wörterbuch/: algemein.md
